# vaccel_catch

./: .gitignore  CMakeLists.txt  README.md  make_script.sh  run_code_coverage.sh  run_tests.sh  test_output.txt  todo.txt
.github/workflows/: CI.yml  tests.yml
plugins/noop/: vaccel.c
src/: CMakeLists.txt  id_pool.h  plugin.c  resources.h  vaccel.c  vaccel.h
src/include/: vaccel.h
test/: CMakeLists.txt  test_blas.cpp  test_classify.cpp  test_exec.cpp  test_fpga.cpp  test_id_pool.cpp  test_image.cpp  test_minmax.cpp  test_noop.cpp  test_plugin.cpp  test_resource.cpp  test_session.cpp  test_tf_interference.cpp  test_tf_model.cpp  test_tf_saved_model.cpp  test_vaccel.cpp
test/docs/: writing_tests.md
tests/: test_fpga.cpp  test_id_pool.cpp  test_plugin.cpp  test_resource.cpp  test_session.cpp  test_vaccel.cpp
